# AI-Lawn-Mower

./: .gitignore  SystemOverview.excalidraw
ai-lawn-mower/: CMakeLists.txt
ai-lawn-mower/components/accelerometer/: CMakeLists.txt
ai-lawn-mower/components/accelerometer/include/: accelerometer.h
ai-lawn-mower/components/accelerometer/src/: accelerometer.c
ai-lawn-mower/components/gpio_driver/: CMakeLists.txt
ai-lawn-mower/components/gpio_driver/include/: gpio_test.h
ai-lawn-mower/components/gpio_driver/src/: gpio_test.c
ai-lawn-mower/components/ir_sensor/: CMakeLists.txt
ai-lawn-mower/components/ir_sensor/include/: ir_sensor.h
ai-lawn-mower/components/ir_sensor/src/: ir_sensor.c
ai-lawn-mower/components/motor_control/: CMakeLists.txt
ai-lawn-mower/components/motor_control/include/: motor_control.h
ai-lawn-mower/components/motor_control/src/: motor_control.c
ai-lawn-mower/main/: CMakeLists.txt  main.c  main_accelerometer.c  main_gpio_test.c  main_ir_sensor_test.c
ai-lawn-mower/main/src/: robot_orchestrator.c
rpi-files/: object_detect.py
